@@ -9,6 +9,7 @@ v0.9.3
 * [BGBUILD-225] Move PAE configuration parameter to operating system configuration
 * [BGBUILD-224] EBS Plugin Support for CentOS v5.5 and fix for non-integer EBS disk sizes
 * [BGBUILD-231] Cannot register Fedora 15 EC2 AMI with S3 delivery plugin in eu-west-1 availability zone
+* [BGBUILD-193] EBS delivery plugin timing/concurrency issues
 
 v0.9.2
 
